--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^4.5.1",
+    "@reown/appkit": "^1.6.5",
+    "@reown/appkit-adapter-ethers": "^1.6.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "ethereum-multicall": "^2.26.0",
-    "ethers": "^5.7.2",
+    "ethers": "^6.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
